<resources>
    <string name="app_name">TheCoffeeCove</string>
    <string name="todo1">todo1</string>
    <string name="welcome_to_hiba_s_coffee_house1" />
    <string name="find_your_best_coffee_in_nsylhet_town" />
    <string name="get_started1" />
    <string name="admin" />
    <string name="welcome_to_hiba_s_coffee_house2">welcome_to_hiba_s_coffee_house1</string>
    <string name="welcome_to_hiba_s_coffee_house">1</string>
    <string name="welcome_to_hiba_s_coffee_house4">welcome_to_hiba_s_coffee_house</string>
    <string name="welcome_to_the_coffe_cove">Welcome to The Coffe Cove</string>
    <string name="find_best_coffee_in_sylhet_town">Find Best Coffee In Sylhet Town</string>
    <string name="welcome_to_the_coffee_cove">welcome_to_the_coffee_cove</string>
    <string name="welcome_to_the_coffee_cove1">Welcome To The Coffee Cove</string>
    <string name="get_started">Get Started</string>
    <string name="Admin">Admin</string>
    <string name="hello_admin">hello_admin</string>
    <string name="insert_coffee">insert_coffee</string>
    <string name="view_n_update_n_delete_n_coffee">view_n_update_n_delete_n_coffee</string>
    <string name="admin_signup">admin_signup</string>
    <string name="admin_name">admin_name</string>
    <string name="enter_admin_name">enter_admin_name</string>
    <string name="password">password</string>
    <string name="enter_your_password">enter_your_password</string>
    <string name="submit">submit</string>
    <string name="back">back</string>
    <string name="to_delete_search_a_product_by_name">to_delete_search_a_product_by_name</string>
    <string name="product_name">product_name</string>
    <string name="product_price">product_price</string>
    <string name="product_quantity">product_quantity</string>
    <string name="product_id">product_id</string>
    <string name="product_image">product_image</string>
    <string name="search">search</string>
    <string name="delete_product">delete_product</string>
    <string name="choose_your_facilities">choose_your_facilities</string>
    <string name="menu_display">menu_display</string>
    <string name="notifications">notifications</string>
    <string name="order_placement">order_placement</string>
    <string name="payment">payment</string>
    <string name="reservation">reservation</string>
    <string name="selected_image">selected_image</string>
    <string name="select_image">select_image</string>
    <string name="insert_product">insert_product</string>
    <string name="back1">back1</string>
    <string name="choose_your_coffee_to_order">choose_your_coffee_to_order</string>
    <string name="sign_up">sign_up</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password1">password1</string>
    <string name="confirm_password">confirm_password</string>
    <string name="phone">phone</string>
    <string name="submit1">submit1</string>
    <string name="notification_title">notification_title</string>
    <string name="notification_text">notification_text</string>
    <string name="notification_icon">notification_icon</string>
    <string name="user_login">user_login</string>
    <string name="user_name">/user_name</string>
    <string name="enter_username">enter_username</string>
    <string name="password2">password1</string>
    <string name="enter_password">enter_password</string>
    <string name="submit2">submit</string>
    <string name="back2">back</string>
    <string name="user_name1">user_name</string>
    <string name="product_name1">product_name</string>
    <string name="product_price1">product_price1</string>
    <string name="product_quantity1">product_quantity</string>
    <string name="order_instructions">order_instructions</string>
    <string name="place_order">place_order</string>
    <string name="reservation_details">reservation_details</string>
    <string name="name">name</string>
    <string name="phone_number">phone_number</string>
    <string name="number_of_guests">number_of_guests</string>
    <string name="date_mm_dd_yyyy">date_mm_dd_yyyy</string>
    <string name="time_hh_mm_am_pm">time_hh_mm_am_pm</string>
    <string name="special_requests">special_requests</string>
    <string name="reserve_now">reserve_now</string>
    <string name="start_your_day_with_n_a_perfect_coffee">start_your_day_with_n_a_perfect_coffee</string>
    <string name="start_your_day_with_n_a_perfect_coffee1">start_your_day_with_n_a_perfect_coffee</string>
    <string name="start_your_day_with_perfect_coffee">Start your day with perfect coffee</string>
    <string name="login">login</string>
    <string name="back3">back</string>
    <string name="to_update_search_a_product_by_name">to_update_search_a_product_by_name</string>
    <string name="product_name2">product_name</string>
    <string name="product_price2">product_price</string>
    <string name="product_quantity2">product_quantity</string>
    <string name="product_id1">product_id</string>
    <string name="product_image1">product_image</string>
    <string name="select_image1">select_image</string>
    <string name="search1">search</string>
    <string name="update_product">update_product</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="view_coffee" />
    <string name="high_quality">High Quality</string>
    <string name="Username" />
</resources>