<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E675AF4C"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/user_login"
        android:textSize="18sp"
        android:textColor="#000000" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name1"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/baseline_key_24"
        android:drawablePadding="8dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit2"
        android:textSize="18sp"
        android:backgroundTint="#1976D2"
        android:textColor="#FFFFFF"
        android:layout_marginTop="100dp"
        tools:ignore="VisualLintButtonSize" />


    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back2"
        android:textSize="18sp"
        android:backgroundTint="#757575"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
