<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints=""
    android:orientation="vertical"
    android:background="#6862A83C"
    android:padding="16dp">

    <!-- Header  -->
    <TextView
        android:id="@+id/text_view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_update_search_a_product_by_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Product Name -->
    <EditText
        android:id="@+id/edit_text_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/product_name2"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        tools:ignore="TextFields,VisualLintTextFieldSize,TextContrastCheck" />

    <!-- Product Price -->
    <EditText
        android:id="@+id/edit_text_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price2"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <!-- Product quantity -->
    <EditText
        android:id="@+id/edit_text_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity2"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        tools:ignore="Autofill,TextContrastCheck,TextFields,VisualLintTextFieldSize" />
    <!-- Product ID -->
    <TextView
        android:id="@+id/text_view_product_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_id1"
        android:padding="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:enabled="false" />

    <!-- Product Image -->
    <ImageView
        android:id="@+id/image_view_product"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        android:src="@drawable/photo8"
        android:contentDescription="@string/product_image" />

    <!-- Select Image Button -->
    <Button
        android:id="@+id/button_select_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image1"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <!--  for side-by-side buttons -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="2">


        <Button
            android:id="@+id/button_search"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#5C7BB027"
            android:text="@string/search1"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />


        <Button
            android:id="@+id/button_update"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#95CDDC39"
            android:text="@string/update_product"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

</LinearLayout>