<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A82ABFA9"
    android:padding="16dp">

    <!-- Header -->
    <TextView
        android:id="@+id/text_view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_delete_search_a_product_by_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Product Name -->
    <EditText
        android:id="@+id/text_view_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/product_name"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        tools:ignore="TextFields,VisualLintTextFieldSize,TextContrastCheck" />

    <!-- Product Price -->
    <TextView
        android:id="@+id/text_view_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:enabled="false"
        android:hint="@string/product_price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:ignore="TextViewEdits" />

    <!-- Product quantity -->
    <TextView
        android:id="@+id/text_view_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:enabled="false"
        android:hint="@string/product_quantity"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:ignore="TextViewEdits" />

    <!-- Product ID -->
    <TextView
        android:id="@+id/text_view_product_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_id"
        android:padding="8dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:enabled="false" />


    <!--  for side-by-side button -->
    <ImageView
        android:id="@+id/image_view_product"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop"
        android:src="@drawable/photo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="2">


        <Button
            android:id="@+id/button_search"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:text="@string/search"
            android:textColor="#000000"
            tools:ignore="VisualLintButtonSize" />


        <Button
            android:id="@+id/button_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/delete_product"
            android:textColor="#F8BBD0"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</LinearLayout>
