<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#426766"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints="username"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="username"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/email"
        android:inputType="text"
        android:drawablePadding="8dp"
        android:padding="12dp"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints="username"
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/et_register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:drawableLeft="@drawable/baseline_key_24"
        android:inputType="textPassword"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints="username"
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/et_register_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:drawableLeft="@drawable/phone_number"
        android:inputType="textPassword"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints="username"
        tools:ignore="VisualLintTextFieldSize" />


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/btn_submit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_light"
            android:padding="12dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_Back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:padding="12dp"
            android:backgroundTint="#2A3E2B"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</LinearLayout>