<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/photo2"
        android:contentDescription="@string/todo1"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/welcome_to_the_coffee_cove1"
        android:textColor="#F7FFFFFF"
        android:textSize="33sp"
        android:textStyle="bold"
        android:gravity="center"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/find_best_coffee_in_sylhet_town"
        android:textColor="#FFFFFF"
        android:fontFamily="cursive"
        android:textSize="30sp"
        android:textStyle="italic"
        android:gravity="center" />

    <Button
        android:id="@+id/buttonGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textSize="19sp"
        android:layout_below="@id/Special"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230sp"
        android:backgroundTint="#EDF1F0"
        android:textColor="#000000" />


    <Button
        android:id="@+id/button_Admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Admin"
        android:textSize="19sp"
        android:layout_below="@id/Special"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300sp"
        android:backgroundTint="#EDF1F0"
        android:textColor="#000000" />

</RelativeLayout>
