<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:background="@drawable/photo3">


    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/p"
        android:contentDescription="@string/notification_icon"
        android:layout_marginEnd="16dp"/>

    <!--Title and Text -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/textViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_text"
            android:textSize="16sp"
            android:textColor="@color/design_default_color_error"/>
    </LinearLayout>

</LinearLayout>