<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="#A6EAAE9B">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/hello_admin"
        android:textColor="#D81B60"
        android:textSize="27sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_insert_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/insert_coffee"
        android:backgroundTint="#D39C27B0"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_view_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/view_n_update_n_delete_n_coffee"
        android:backgroundTint="#D39C27B0"
        android:textColor="#ffffff"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>